# rustplot-readwrite

./: .convert_ico.sh.un~  .make_icon.bat.un~  Cargo.toml  build.rs  convert_ico.sh  convert_ico.sh~  data.yaml  make_icon.bat  ui_config.yaml
assets/: .app.rc.un~  app.res
src/: font_loader.rs  graph.rs  main.rs  save_load.rs
