[package]
name = "egui-app"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.8.0"
dirs = "6.0.0"
eframe = { version = "0.31.0", features = ["persistence", "glow", "accesskit"] }
egui_plot = "0.31.0"
image = "0.25.5"
include_dir = "0.7.4"
rand = "0.9.0"
rfd = "0.15.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"

[package.metadata.bundle]
name = "Egui App" # 你的應用名稱
identifier = "com.example.eguiapp" # 你的應用 ID (通常是反向網域名稱)
icon = ["assets/icon.png"] # macOS `.icns` 圖示 (選填)
resources = ["assets/NotoSansTC-Medium.ttf"]
category = "public.app-category.utilities"
short_description = "A simple Egui application"
long_description = "This is an example application built with egui and Rust."

[[bin]]
name = "egui-app"
path = "src/main.rs"
windows_subsystem = "windows"
